.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Distribution_Member_Zone_Type__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Distribution_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Member</label>
        <referenceTo>Incap311__Distribution_Member__c</referenceTo>
        <relationshipLabel>Distribution Member Zone Type</relationshipLabel>
        <relationshipName>Distribution_Member_Zone_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Distribution_Name__c</fullName>
        <formula>Incap311__Distribution__r.Incap311__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Distribution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution</label>
        <referenceTo>Incap311__Distributions__c</referenceTo>
        <relationshipLabel>Distribution Member Zone Type</relationshipLabel>
        <relationshipName>Distribution_Member_Zone_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Coordinator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Coordinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Member_Email__c</fullName>
        <formula>Incap311__Distribution_Member__r.Incap311__Contact_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Name__c</fullName>
        <formula>Incap311__Service_Type__r.Incap311__Service_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Type</label>
        <referenceTo>Incap311__Service_Type__c</referenceTo>
        <relationshipLabel>Distribution Member Zone Type</relationshipLabel>
        <relationshipName>Distribution_Member_Zone_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Zone_Type__c</fullName>
        <formula>TEXT(Incap311__Zone__r.Incap311__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Zone_Value__c</fullName>
        <formula>Incap311__Zone__r.Incap311__Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>Incap311__Zone__c</referenceTo>
        <relationshipLabel>Distribution Member Zone Type</relationshipLabel>
        <relationshipName>Distribution_Member_Zone_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Distribution Member Zone Type</label>
    <nameField>
        <displayFormat>SDMZT-{000000000}</displayFormat>
        <label>Distribution Member Zone Type Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Member Zone Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>